--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,12 +1,15 @@
 name: audio_recorder_example
 description: Demonstrates how to use the audio_recorder plugin.
 
+environment:
+  sdk: ">=2.7.0 <3.0.0"
+
 dependencies:
   flutter:
     sdk: flutter
-  path_provider: ^1.1.0
-  file: ^5.0.4
-  permission_handler: ^5.0.1+1
+  path_provider: ^2.0.2
+  file: ^6.1.2
+  permission_handler: ^8.1.4+2
 
 
 dev_dependencies:
