--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,14 +4,14 @@ version: 1.0.2
 homepage: https://github.com/ZaraclaJ/audio_recorder
 
 dependencies:
-  path: ^1.5.1
   flutter:
     sdk: flutter
-  file: ^5.0.4
+  file: ^6.0.2
+  path: ^1.8.0
 
 
 environment:
-  sdk: ">=2.0.0-dev.40.0.flutter-f981f09760 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 flutter:
   plugin:
@@ -21,5 +21,4 @@ flutter:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  test: ^1.3.0
-  path_provider: ^1.1.0
+  path_provider: ^2.0.2
